# opengl-render-engine

./: .gitignore  CMakeLists.txt  README.md
shaders/compute/: height_generator.compute.glsl
shaders/compute/includes/: craters.compute.glsl  noise.compute.glsl  simplex_noise.compute.glsl
shaders/default/: default.frag.glsl  default.vert.glsl
shaders/normals/: normal.geo.glsl  normal.vert.glsl
shaders/postprocessing/: postprocessing.frag.glsl  postprocessing.vert.glsl
shaders/triplanar/: triplanar.frag.glsl  triplanar.vert.glsl
shaders/wireframe/: wireframe.frag.glsl  wireframe.geo.glsl
src/: main.cc
src/helpers/: lib-helpers.hh
src/helpers/glfw/: helper.cc  helper.hh
src/helpers/imgui/: helper.cc  helper.hh
src/helpers/opengl/: helper.cc  helper.hh
src/math/: math.cc  math.hh  time.cc  time.hh  transform.cc  transform.hh
src/rendering/camera/: camera.cc  camera.hh
src/rendering/mesh/: mesh.hh
src/rendering/mesh/drawable/: mesh-renderer.cc  mesh-renderer.hh
src/rendering/mesh/drawable/gpu/: mesh-gpu.cc  mesh-gpu.hh
src/rendering/mesh/loader/: obj-parser.cc  obj-parser.hh
src/rendering/postprocessing/: postprocessing.cc  postprocessing.hh
src/rendering/shader/: shader.cc  shader.hh  ssbo.cc  ssbo.hh
src/rendering/shapes/: mesh-sphere.hh  shapes.cc  shapes.hh
src/rendering/texture/: image.hh  texture.cc  texture.hh
src/scenes/: scene.cc  scene.hh
src/scenes/custom_scenes/: custom_scene.hh
src/scenes/custom_scenes/moon/: moon_scene.cc  moon_scene.hh
src/scenes/helper/: scene-helper.cc  scene-helper.hh
(+3 files in other folders)
